--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "bootstrap": "^5.3.2",
     "react-bootstrap": "^2.9.0",
     "react-router-bootstrap": "^0.26.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
